instalation de wow et section hero et about

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -22,6 +22,8 @@ const { label = "Badge", color = "part" } = Astro.props;
   }
 
 
-.badge-part { background-color: var(--badgepart); }
-.badge-pro  { background-color: var(--badgepro); }
+.freelance { background-color: var(--freelance); }
+.personnel  { background-color: var(--perso); }
+.stage     { background-color: var(--stage); }
+.entreprise { background-color: var(--entreprise); } 
 </style>
