--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,10 @@
 ---
-import Button from "./Button.astro"
+
 ---
 
-<footer class="bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800 mt-auto">
+<footer
+  class="bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800 mt-auto"
+>
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
     <div class="text-center">
       <p class="text-gray-600 dark:text-gray-400 mb-4">
@@ -12,15 +14,19 @@ import Button from "./Button.astro"
       <nav>
         <ul class="flex justify-center gap-6 text-sm">
           <li>
-            <a 
-              href="/m-legales" 
+            <a
+              href="/m-legales"
               class="text-gray-600 dark:text-gray-400 font-medium transition-colors"
             >
               Mentions légales
             </a>
           </li>
           <li>
-            <a  aria-label="gerer les cookies" id="manage-cookies" class="text-gray-600 dark:text-gray-400 font-medium transition-colors" >
+            <a
+              aria-label="gerer les cookies"
+              id="manage-cookies"
+              class="text-gray-600 dark:text-gray-400 font-medium transition-colors"
+            >
               Gérer mes cookies
             </a>
           </li>
@@ -29,4 +35,3 @@ import Button from "./Button.astro"
     </div>
   </div>
 </footer>
-
