--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,23 @@
 import Button from "../components/Button.astro";
 import SocialLinks from "../components/SocialLinks.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import { Image } from "astro:assets";
+import portrait from "../assets/images/portrait.webp";
 ---
 
 <BaseLayout>
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
     <!-- Hero Section -->
     <div class="text-center mb-20">
-      <h1
-        class="text-gradient text-5xl md:text-6xl font-bold mb-6"
-      >
-        Ici prochainement mon Portfolio
+      <Image
+        src={portrait}
+        alt="Portrait d'Isabelle"
+        class="rounded-full  justify-self-center portrait"
+        width={250}
+        height={250}
+      />
+      <h1 class="text-gradient text-5xl md:text-6xl font-bold mb-6">
+        Isabelle LAMARRE
       </h1>
       <p class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
         Développeuse Web passionnée par les technologies modernes
@@ -20,19 +27,36 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
     <!-- Sections -->
     <div class="space-y-20">
-      <section
-        id="about">
-        <div class="text-center">
+      <section id="about">
+        <div class="text-center text-gray-600 font-medium dark:text-gray-300 ">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
-            Section 1
+            A propos de moi
           </h2>
-          <hr class="hr-gradient"/>
-          <p class="text-gray-600 dark:text-gray-300">Contenu à venir...</p>
+          <hr class="hr-gradient" />
+          <p class= "wow animate__animated animate__fadeInRight">
+            Je m’appelle Isabelle, développeuse web passionnée et curieuse, avec
+            un parcours atypique : de la rigueur des laboratoires scientifiques
+            à la créativité du développement web.<p />
+           <p class="wow animate__animated animate__fadeInLeft">
+            J’aime transformer des idées en projets concrets, qu’il s’agisse de sites
+            vitrines élégants, d’applications interactives ou d’outils pratiques
+            de back-office.</p>
+            <p class= "wow animate__animated animate__fadeInRight">
+            🚀 Toujours en quête d’apprentissage, je me forme actuellement sur Google
+            Cloud et je m’intéresse particulièrement aux environnements Next.js,
+            MongoDB et aux solutions DevOps pour rendre mes projets encore plus solides
+            et performants.</p>
+            <p class="wow animate__animated animate__fadeInLeft">💡 Ce que j’aime le plus ? Trouver des solutions simples à des problèmes
+            complexes, et apporter une touche personnelle et créative à mes projets.</p>
+            <p class= "wow animate__animated animate__fadeInRight">👉 Aujourd’hui, je suis à la recherche aussi bien d’un poste salarié
+            pour continuer à monter en compétences au sein d’une équipe, que de missions
+            freelance pour accompagner des projets concrets et variés.
+          </p>
+          <hr class="hr-gradient" />
         </div>
       </section>
 
-      <section
-        id="certifications">
+      <section id="certifications">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 2
@@ -41,8 +65,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </section>
 
-      <section
-        id="technos">
+      <section id="technos">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 3
@@ -51,8 +74,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </section>
 
-      <section 
-        id="realisations">
+      <section id="realisations">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 4
@@ -61,8 +83,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </section>
 
-      <section
-        id="tarifs">
+      <section id="tarifs" class="glass">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 5
@@ -71,26 +92,36 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </section>
 
-      <section
-        id="contact">
+      <section id="contact">
         <div class="text-center text-gray-600 dark:text-gray-300">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Contacts
           </h2>
-          <div class="flex flex-col m-8 ">
-            <a class=" text-gray-800  dark:text-white"
-            href="mailto:lalicornecosmique62@gmail.com? subject=Contact depuis le site=Bonjour%20Isabelle,"
-            aria-label="lalicornecosmique62@gmail.com"
-            >lalicornecosmique62@gmail.com</a>
-            <a class=" text-gray-800  dark:text-white" href="tel:+33682157497" aria-label="06 82 15 74 97 "
-            >06 82 15 74 97</a>
+          <div class="flex flex-col m-8">
+            <a
+              class="text-gray-800 dark:text-white"
+              href="mailto:lalicornecosmique62@gmail.com? subject=Contact depuis le site=Bonjour%20Isabelle,"
+              aria-label="lalicornecosmique62@gmail.com"
+              >lalicornecosmique62@gmail.com</a
+            >
+            <a
+              class="text-gray-800 dark:text-white"
+              href="tel:+33682157497"
+              aria-label="06 82 15 74 97 ">06 82 15 74 97</a
+            >
           </div>
           <div>
-            <SocialLinks size="lg"/>
+            <SocialLinks size="lg" />
           </div>
-        <div class=" mt-10">
-           <Button variant="gradient" target="_blank" rel="noopener noreferrer" href="https://calendly.com/isabellelamarre62/premier">prendre rdv</Button>
-       </div>
+          <div class="mt-10">
+            <Button
+              variant="gradient"
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://calendly.com/isabellelamarre62/premier"
+              >prendre rdv</Button
+            >
+          </div>
         </div>
       </section>
     </div>
