--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ import Image from "astro/components/Image.astro";
       <!-- Navigation Desktop -->
       <ul class="hidden md:flex items-center space-x-8">
         <li><a href="#about" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Qui suis-je?</a></li>
-        <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li>
+        <!-- <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li> -->
         <li><a href="#technos" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Technos</a></li>
         <li><a href="#realisations" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Réalisations</a></li>
         <li><a href="#tarifs" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Tarifs</a></li>
@@ -47,7 +47,7 @@ import Image from "astro/components/Image.astro";
     <div id="mobile-menu" class="hidden text-center md:hidden pb-4 mt-2 rounded-lg bg-white/70 dark:bg-slate-900/70 backdrop-blur-md shadow-lg transition-all duration-300">
       <ul class="space-y-2 px-4">
         <li><a href="#about" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Qui suis-je?</a></li>
-        <li><a href="#certifications" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Certifications</a></li>
+        <!-- <li><a href="#certifications" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Certifications</a></li> -->
         <li><a href="#technos" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Technos</a></li>
         <li><a href="#realisations" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Réalisations</a></li>
         <li><a href="#tarifs" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Tarifs</a></li>
