--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,23 +4,30 @@ import SocialLinks from "../components/SocialLinks.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
 import portrait from "../assets/images/portrait.webp";
+import TechCards from "../components/TechCards.astro";
 ---
 
 <BaseLayout>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
+  <div class=" max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
     <!-- Hero Section -->
-    <div class="text-center mb-20">
+    <div class="min-h-screen text-center mb-20">
       <Image
         src={portrait}
         alt="Portrait d'Isabelle"
-        class="rounded-full  justify-self-center portrait"
+        class="rounded-full justify-self-center portrait"
         width={250}
         height={250}
+        loading="eager"
+        data-aos="fade-down"
+      data-aos-duration="1200"
+      data-aos-offset="200"
       />
-      <h1 class="text-gradient text-5xl md:text-6xl font-bold mb-6">
+      <h1 class="text-gradient text-6xl md:text-6xl font-bold mb-6" data-aos="fade-up"
+      data-aos-duration="1200"
+      data-aos-offset="200">
         Isabelle LAMARRE
       </h1>
-      <p class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
+      <p class="text-3xl max-w-2xl mx-auto" data-aos="fade-right" data-aos-duration="1200" >
         Développeuse Web passionnée par les technologies modernes
       </p>
     </div>
@@ -28,27 +35,36 @@ import portrait from "../assets/images/portrait.webp";
     <!-- Sections -->
     <div class="space-y-20">
       <section id="about">
-        <div class="text-center text-gray-600 font-medium dark:text-gray-300 ">
-          <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
+        <div class="text-center font-medium ">
+          <h2 class="text-4xl font-bold mb-4">
             A propos de moi
           </h2>
           <hr class="hr-gradient" />
-          <p class= "wow animate__animated animate__fadeInRight">
+
+          <p data-aos="fade-right"
+      data-aos-duration="1200"
+    class="text-2xl" >
             Je m’appelle Isabelle, développeuse web passionnée et curieuse, avec
             un parcours atypique : de la rigueur des laboratoires scientifiques
             à la créativité du développement web.<p />
-           <p class="wow animate__animated animate__fadeInLeft">
+           <p class="text-2xl" data-aos="fade-left"
+      data-aos-duration="1200"
+      >
             J’aime transformer des idées en projets concrets, qu’il s’agisse de sites
             vitrines élégants, d’applications interactives ou d’outils pratiques
             de back-office.</p>
-            <p class= "wow animate__animated animate__fadeInRight">
+            <p class="text-2xl" data-aos="fade-right"
+      data-aos-duration="1200"
+     >
             🚀 Toujours en quête d’apprentissage, je me forme actuellement sur Google
             Cloud et je m’intéresse particulièrement aux environnements Next.js,
             MongoDB et aux solutions DevOps pour rendre mes projets encore plus solides
             et performants.</p>
-            <p class="wow animate__animated animate__fadeInLeft">💡 Ce que j’aime le plus ? Trouver des solutions simples à des problèmes
+            <p class="text-2xl" data-aos="fade-left"
+      data-aos-duration="1200">💡 Ce que j’aime le plus ? Trouver des solutions simples à des problèmes
             complexes, et apporter une touche personnelle et créative à mes projets.</p>
-            <p class= "wow animate__animated animate__fadeInRight">👉 Aujourd’hui, je suis à la recherche aussi bien d’un poste salarié
+            <p class="text-2xl" data-aos="fade-right"
+      data-aos-duration="1200">👉 Aujourd’hui, je suis à la recherche aussi bien d’un poste salarié
             pour continuer à monter en compétences au sein d’une équipe, que de missions
             freelance pour accompagner des projets concrets et variés.
           </p>
@@ -56,21 +72,21 @@ import portrait from "../assets/images/portrait.webp";
         </div>
       </section>
 
-      <section id="certifications">
+      <!-- <section id="certifications">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 2
           </h2>
           <p class="text-gray-600 dark:text-gray-300">Contenu à venir...</p>
         </div>
-      </section>
+      </section> -->
 
       <section id="technos">
         <div class="text-center">
-          <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
-            Section 3
+          <h2 class="text-4xl font-bold mb-4">
+            Technologies & Outils
           </h2>
-          <p class="text-gray-600 dark:text-gray-300">Contenu à venir...</p>
+          <TechCards size="lg" />
         </div>
       </section>
 
