section certification+ technos

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ import Image from "astro/components/Image.astro";
       <!-- Navigation Desktop -->
       <ul class="hidden md:flex items-center space-x-8">
         <li><a href="#about" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Qui suis-je?</a></li>
-        <!-- <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li> -->
+        <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li>
         <li><a href="#technos" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Technos</a></li>
         <li><a href="#realisations" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Réalisations</a></li>
         <li><a href="#tarifs" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Tarifs</a></li>
